# ngraph

./: CMakeLists.txt
cmake/: external_mkldnn.cmake  external_mlsl.cmake  libmkldnn.so.in  mkldnn.patch
python/: CMakeLists.txt  tox.ini.in
src/ngraph/runtime/ccpu/: CMakeLists.txt  ccpu_backend.cpp  ccpu_backend.hpp  ccpu_builder.cpp  ccpu_builder.hpp  ccpu_call_frame.cpp  ccpu_call_frame.hpp  ccpu_emitter.cpp  ccpu_emitter.hpp  ccpu_external_function.cpp  ccpu_external_function.hpp  ccpu_kernel_emitters.cpp  ccpu_kernel_utils.cpp  ccpu_kernels.cpp  ccpu_layout_descriptor.cpp  ccpu_op_annotations.hpp  ccpu_runtime_context.hpp  ccpu_tensor_view.cpp  ccpu_tensor_view.hpp  ccpu_tensor_view_wrapper.cpp  ccpu_tracing.cpp  ccpu_tracing.hpp  cpu_backend.cpp  cpu_builder.cpp  cpu_builder.hpp  cpu_call_frame.cpp  cpu_call_frame.hpp  cpu_emitter.cpp  cpu_emitter.hpp  cpu_external_function.cpp  cpu_external_function.hpp  cpu_kernel_emitters.cpp  cpu_kernel_utils.cpp  cpu_kernels.cpp  cpu_layout_descriptor.cpp  cpu_tensor_view.cpp  cpu_tensor_view_wrapper.cpp  cpu_tracing.hpp  mkldnn_emitter.cpp  mkldnn_emitter.hpp  (+4 more)
src/ngraph/runtime/ccpu/builder/: add.cpp  allreduce.cpp  argmax.cpp  argmin.cpp  avg_pool.cpp  batch_norm.cpp  bounded_relu.cpp  broadcast.cpp  concat.cpp  convert.cpp  convert_layout.cpp  convolution.cpp  dot.cpp  function_call.cpp  lrn.cpp  lstm.cpp  matmul_bias.cpp  max.cpp  max_pool.cpp  min.cpp  one_hot.cpp  pad.cpp  product.cpp  reduce_function.cpp  reduce_function_window.cpp  relu.cpp  replace_slice.cpp  reshape.cpp  reverse.cpp  reverse_sequence.cpp  rnn.cpp  select.cpp  select_and_scatter.cpp  sigmoid.cpp  slice.cpp  softmax.cpp  sum.cpp
src/ngraph/runtime/ccpu/kernel/: abs.hpp  acos.hpp  add.hpp  and.hpp  asin.hpp  atan.hpp  broadcast.hpp  ceil.hpp  concat.hpp  convert.hpp  cos.hpp  cosh.hpp  cwise_pow.hpp  divide.hpp  dot.hpp  equal.hpp  exp.hpp  floor.hpp  greater.hpp  greater_eq.hpp  less.hpp  less_eq.hpp  log.hpp  maximum.hpp  minimum.hpp  multiply.hpp  negative.hpp  not.hpp  not_equal.hpp  one_hot.hpp  or.hpp  pad.hpp  reduce_function.hpp  reduce_function_window.hpp  reduce_max.hpp  reduce_min.hpp  reduce_product.hpp  reduce_sum.hpp  relu.hpp  replace_slice.hpp  (+13 more)
src/ngraph/runtime/ccpu/op/: batch_norm_relu.cpp  bounded_relu.cpp  conv_relu.cpp  conv_relu.hpp  convert_layout.cpp  loop_kernel.cpp  lstm.cpp  max_pool_with_indices.cpp  rnn.cpp  sigmoid.cpp  sigmoid_mul.cpp
src/ngraph/runtime/ccpu/pass/: cpu_assignment.cpp  cpu_assignment.hpp  cpu_concat_inputs.cpp  cpu_fusion.cpp  cpu_layout.cpp  cpu_layout.hpp  cpu_loop_kernel_fusion.cpp  cpu_mat_fusion.cpp  cpu_post_layout_optimizations.cpp  cpu_rnn_fusion.cpp  cpu_rnn_fusion.hpp  cpu_workspace_insertion.cpp
test/: CMakeLists.txt  algebraic_simplification.cpp  autodiff.in.cpp  backend_one_hot.in.cpp  backend_performance.cpp  backend_pool.in.cpp  backend_test.in.cpp  builder.cpp  cpu_fusion.cpp  cpu_test.cpp  distributed.cpp  graph_partition.cpp  hybrid_backend.cpp  (+6 more)
(+182 files in other folders)
